applications/pelican-panel/pelican-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pelican-panel
  namespace: pelican-panel

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pelican-panel

  template:
    metadata:
      labels:
        app: pelican-panel

    spec:
      enableServiceLinks: false
      containers:
        - name: pelican-panel
          image: ghcr.io/pelican/panel:v1.0.0-beta38
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
              name: http
            - containerPort: 9000
              name: fpm

          volumeMounts:
            - name: pelican-panel-data
              mountPath: /pelican-data
            - name: pelican-panel-logs
              mountPath: /var/www/html/storage/logs
            - name: pelican-panel-plugins
              mountPath: /var/www/html/plugins

      volumes:
        - name: pelican-panel-data
          persistentVolumeClaim:
            claimName: pelican-panel-data-rwo
        - name: pelican-panel-logs
          persistentVolumeClaim:
            claimName: pelican-panel-logs-rwo
        - name: pelican-panel-plugins
          persistentVolumeClaim:
            claimName: pelican-panel-plugins-rwo
