applications/pelican-panel/pelican-db-admin-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: pelican-db-admin
  namespace: pelican-panel

spec:
  selector:
    app: pelican-db-admin

  ports:
    - protocol: TCP
      port: 80
      targetPort: http
