applications/pelican-panel/pelican-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: pelican-panel-svc
  namespace: pelican-panel

spec:
  selector:
    app: pelican-panel

  ports:
    - name: http
      port: 80
      targetPort: http
